--- a/style.css
+++ b/style.css
@@ -63,14 +63,15 @@ h1 {
 }
 
 .home {
-    height: 700px;
+    height: 750px;
     background-color: yellow;
     padding-top: 50px;
-
+    background-image: url(images/interieur.jpeg);
+    background-size: cover;
 }
 
 .aboutus {
-    height: 700px;
+    height: 750px;
     background-color: teal;
     padding-top: 50px;
 }
