--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1 {
 
 .navnav {
     display: flex;
+    border: 1px solid black;
 }
 
 .topnav img {
@@ -35,6 +36,7 @@ h1 {
     right: 0px;
     padding: 0;
     margin: 0;
+    margin-right: 10px;
 }
 
 
@@ -59,7 +61,7 @@ h1 {
 
 .topnav a:hover {
     background-color: red;
-    color: whitesmoke;
+    color: white;
 }
 
 .home {
@@ -68,6 +70,20 @@ h1 {
     padding-top: 50px;
     background-image: url(images/interieur.jpeg);
     background-size: cover;
+    text-align: center;
+}
+
+.spatie {
+    height: 250px;
+}
+
+.text {
+    padding-top: 2px;
+    background-color: white;
+    height: 250px;
+    width: 60%;
+    margin: 0 auto;
+
 }
 
 .aboutus {
@@ -76,13 +92,15 @@ h1 {
     padding-top: 50px;
 }
 
+#contact {
+    padding-top: 50px;
+}
+
 .contact {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     text-align: center;
-    background-color: red;
-    padding-top: 50px;
     height: 700px;
 }
 
@@ -97,8 +115,8 @@ h1 {
 
 .contact div {
     display: inline-block;
-    margin-left: 30px;
     text-align: center;
+    margin: 100px auto;
 }
 
 footer p {
